--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_JournalPart.EventList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_JournalPart.EventList.cshtml
@@ -1,7 +1,14 @@
 ﻿<header class="dashboard-title event-list-header">
 	<span class="display-events-header-menu-title hover-cursor-pointer" data-bind="click: function () { $root.showSelectedJournalMenuItem( 1 ) }, css: { selected: $root.detailsPage.journalPart.eventListVM.selectedMenuItem() === 1 }">Mój kalendarz</span>
 	<span class="display-events-header-menu-title hover-cursor-pointer" data-bind="click: function () { $root.showSelectedJournalMenuItem( 2 ) }, css: { selected: $root.detailsPage.journalPart.eventListVM.selectedMenuItem() === 2 }">Moje publiczne wydarzenia</span>
-	<i class="btn-close md-icon-hover md-icon-rg mdi mdi-window-close" data-bind="click: $root.closeAllSelectedEventsListContainerOnClick"></i>
+	<i style="    position: absolute;
+    right: 0px;
+    top: 0;
+    text-align: center;
+    width: 43px;
+    height: 43px;
+    padding: 4px;
+    background: #888181;" class="btn-close md-icon-hover md-icon-rg mdi mdi-window-close" data-bind="click: $root.closeAllSelectedEventsListContainerOnClick"></i>
 </header>
 <div data-bind="with: $root.detailsPage.journalPart.eventListVM, visible: $root.detailsPage.journalPart.eventListVM.selectedMenuItem() == 1" class="display-events-overview-body">
 	<div class="legend-oldorupcoming hover-cursor-pointer" data-bind="css: { open: menuItems.myCalendar.showOld() }, click: function () { menuItems.myCalendar.showOld( !menuItems.myCalendar.showOld() ), $root.showSelectedEvents( menuItems.myCalendar.selectedEvents, 'old', selectedEventKindValues ) }">
