--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_NavPart.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_NavPart.cshtml
@@ -10,9 +10,9 @@
 	<p class="lobby-quote">Twój osobisty kalendarz stworzony na miare Twoich potrzeb.</p>
 </section>
 <nav id="lobbyNavContainer">
-	<a href="#0" class="skin-nav-item selected">Strona Główna</a>
-	<a href="#1" class="skin-nav-item">Kalendarz</a>
-	<a href="#2" class="skin-nav-item">Dziennik</a>
+	<a href="#0" class="skin-nav-item section-title selected">Strona Główna</a>
+	<a href="#1" class="skin-nav-item section-title">Kalendarz</a>
+	<a href="#2" class="skin-nav-item section-title">Dziennik</a>
 </nav>
 
 @Html.Partial( "_Login", new KalendarzKarieryData.Models.AccountModels.LoginModel() )
