--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_EventListItem.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_EventListItem.cshtml
@@ -11,9 +11,9 @@
 					<span class="sm-label-rg" data-bind="text: startDate.displayFullDate()"></span>
 					<span class="sm-label" data-bind="text: $root.dayNames[startDate.javaScriptStartDate.getDay()]"></span>,
 					<span class="sm-label" data-bind="text: startDate.displayFullTime()"></span>
-					<span class="sm-label" style="color: white;position:absolute;right:4px;" data-bind="text: startDate.displayInfo()"></span>
+					<span class="sm-label" style="position:absolute;right:4px;" data-bind="text: startDate.displayInfo()"></span>
 				</div>
-				<span class="list-item-title" data-bind="text: name"></span>
+				<div class="list-item-title" data-bind="text: name"></div>
 			</div>
 		</div>
 		<div class="event-block-expand">
