--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@Html.Partial( "_LoginBar" )
-<div style="position:fixed;left:10px;color: #c6c1c1;">version alpha</div>
+<div style="position:fixed;left:10px;color: #c6c1c1;z-index:10;">version alpha</div>
 <div id="initialWhiteOverlay"></div>
 <div id="dzieuo" style="visibility: hidden;">
 	<section id="lobby" class="dz-column">
