--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DayPlanPart.NotesList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DayPlanPart.NotesList.cshtml
@@ -18,7 +18,7 @@
             <div style="font-size: 14px; color: rgb(167, 167, 167); text-align: right; text-decoration: none;">
               <span data-bind="text: dateAdded.displayFullTime()" style="padding-right:10px;"></span><span></span><span data-bind="	text: dateAdded.displayFullDate()"></span>
             </div>
-            <span style="font-size: 16px; float: right; color: rgb(220, 220, 220)">
+            <span style="font-size: 16px; float: right; color: rgb(198, 193, 193);">
               <span class="link" data-bind="click: function () { $root.setLineThroughNoteDetailsPageOnLineThroughLinkClick( id, displayDate.year, displayDate.month, displayDate.day, !isLineThrough() ) }, text: isLineThrough() ? 'odkreśl' : 'skreśl' ">skreśl</span>
               <span class="link" data-bind="click: function () { $root.editNoteDetailsPageOnEditLinkClick( id, displayDate.year, displayDate.month, displayDate.day ) }">edytuj</span>
               <span data-bind="click: function () { $root.prepareDeleteNoteDetailsPageOnDeleteLinkClick( id, displayDate.year, displayDate.month, displayDate.day ) }" class="link">usuń</span>
