--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_EventListItem.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_EventListItem.cshtml
@@ -1,5 +1,5 @@
 ﻿<li>
-	<div class="event-list-item-container">
+	<div class="event-list-item-container" data-bind="attr: { eventid: id}">
 		<div class="event-list-item" data-bind="click: function () { $root.expandEventOverviewItemOnClick( $element ) }">
 			<i class="md-icon-hover md-icon-rg mdi mdi-chevron-up expand-label"></i>
 			<div class="event-list-item-left">
