--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DayPlanPart.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DayPlanPart.cshtml
@@ -2,13 +2,13 @@
 	@Html.Partial( "_DayPlanPart.DayPlanTable" )
 
 	<div id="detailsEventsAndNotesContainer" data-bind="with: $root.detailsPage.dayPlanPart.eventListVM">
-		<div class="inline-block" style="width: 49%; border-left: 2px solid #f1eeee; border-bottom: 2px solid #f1eeee;">
+		<div class="inline-block" style="width: 50%;">
 			<div class="dashboard-title"><span class="selected">Wydarzenia</span></div>
 			<ol id="detailsEventBlockList" data-bind="foreach: events()">
 				@Html.Partial( "_EventListItem", new ViewDataDictionary { { "page", "details" } } )
 			</ol>
 		</div>
-		<div class="inline-block" style="width: 49%; float: right; border-right: 2px solid #F1EEEE; border-bottom: 2px solid #F1EEEE;" data-bind="with: $root.detailsPage.dayPlanPart.noteListVM">
+		<div class="inline-block" style="width: 49%; float: right;" data-bind="with: $root.detailsPage.dayPlanPart.noteListVM">
 			<div class="dashboard-title" style="height:27px;">
 				<span class="selected">Notatki</span>
 					<i style="position: absolute;right: 0px;top: 0;text-align: center;width: 43px;height: 43px;padding: 4px;background: #888181;" class="mdi mdi-plus md-icon-rg md-icon-hover" data-bind="click: function () { isAddNoteSectionOpen( true ); $( '#noteTxtArea' ).focus() }"></i>
