--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_DashboardPart.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_DashboardPart.cshtml
@@ -18,21 +18,21 @@
 		<div class="overview-events-list-container">
 			<div class="dashboard-title"><span class="selected">Mój kalendarz</span></div>
 
-			<h4 style="font-weight: normal; color: #a7a2a2; padding-left: 10px;">dzisiaj</h4>
+			<h4 style="font-weight: normal; color: white; padding-left: 10px;">dzisiaj</h4>
 
 
 			<ol class="dashboard-calendar-list today-dashboard-list" data-bind="foreach: $root.lobbyPage.dashboardPart.myCalendarVM.today">
 				@Html.Partial( "_EventListItem",  new ViewDataDictionary { { "page", "lobby" } } )
 			</ol>
 
-			<h4 style="font-weight: normal; color: #a7a2a2; padding-left: 10px;">jutro</h4>
+			<h4 style="font-weight: normal; color: white; padding-left: 10px;">jutro</h4>
 
 
 			<ol class="dashboard-calendar-list" data-bind="foreach: $root.lobbyPage.dashboardPart.myCalendarVM.tommorow">
 				@Html.Partial( "_EventListItem",  new ViewDataDictionary { { "page", "lobby" } } )
 			</ol>
 
-			<h4 style="font-weight: normal; color: #a7a2a2; padding-left: 10px;">pojutrze</h4>
+			<h4 style="font-weight: normal; color: white; padding-left: 10px;">pojutrze</h4>
 
 
 			<ol class="dashboard-calendar-list" data-bind="foreach: $root.lobbyPage.dashboardPart.myCalendarVM.dayAfterTommorow">
