--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_AddNewEvent.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_AddNewEvent.cshtml
@@ -158,7 +158,7 @@
 							</div>
 						</div>
 
-						<button id="btnAddNewEvent" class="btn-add hover-cursor-pointer" data-bind="click: $root.saveEventOnClick">dodaj
+						<button id="btnAddNewEvent" class="btn-add hover-cursor-pointer" data-bind="click: function(){ $root.saveEventOnClick() }">dodaj
 						</button>
 					</div>
 				</fieldset>
